[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "promptval"
version = "0.1.0"
description = "AI-powered prompt validation and enhancement tool that detects issues like redundancy, conflicts, missing strategy sections, and PII/secrets, then uses multiple LLM providers to generate improved, compliant prompts."
readme = "README.md"
authors = [
  { name = "Aman India", email = "mramanindia@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "pydantic>=2.0,<3.0",
]
keywords = ["prompts", "validation", "cli", "pii", "quality"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/mramanindia/PromptVal"
Repository = "https://github.com/mramanindia/PromptVal"
Documentation = "https://github.com/mramanindia/PromptVal#readme"
Issues = "https://github.com/mramanindia/PromptVal/issues"

[project.optional-dependencies]
openai = [
  "openai>=1.0.0,<2.0.0",
]
anthropic = [
  "anthropic>=0.34.0",
]
gemini = [
  "google-generativeai>=0.7.2",
]
all = [
  "openai>=1.0.0,<2.0.0",
  "anthropic>=0.34.0",
  "google-generativeai>=0.7.2",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
promptval = "promptval.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
source = ["promptval"]
branch = true